[package]
name = "debug-swc"
version = "0.2.0"
authors = ["thzt <thzt.xx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "0.81.0"
swc_common = { version = "0.15.0", features=["tty-emitter"] }
swc_ecma_ast = "0.59.0"
swc_atoms = "0.2.9"